tests/ui/issues/issue-46311.rs
fn main() {
    'break: loop { //~ ERROR labels cannot use keyword names
    }
}
